# data_graph_gap_report

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bench.json  prompt_plan.md  pyproject.toml  pytest.ini  spec.md  todo.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: architecture.md
meta/: labels_email.parquet  labels_nlq.parquet  labels_slack.parquet
meta/ci_logs_49492934407/: 1_checks (macos-latest, 3.11.9).txt  2_checks (ubuntu-latest, 3.11.9).txt
meta/ci_logs_49492934407/checks (macos-latest, 3.11.9)/: 10_Log pip cache duration.txt  11_Install pre-commit and poetry.txt  12_Log tool installation duration.txt  13_Run pre-commit.txt  1_Set up job.txt  23_Log total job duration.txt  2_Initialize timing table.txt  3_Run actions_checkout@v4.txt  46_Post Run actions_checkout@v4.txt  47_Complete job.txt  4_Log checkout duration.txt  5_Run actions_setup-python@v5.txt  6_Log setup-python duration.txt  7_Cache Poetry virtualenv.txt  8_Log poetry cache duration.txt  9_Cache pip wheels.txt  system.txt
meta/ci_logs_49492934407/checks (ubuntu-latest, 3.11.9)/: 10_Log pip cache duration.txt  11_Install pre-commit and poetry.txt  1_Set up job.txt  23_Log total job duration.txt  2_Initialize timing table.txt  3_Run actions_checkout@v4.txt  46_Post Run actions_checkout@v4.txt  47_Complete job.txt  4_Log checkout duration.txt  5_Run actions_setup-python@v5.txt  6_Log setup-python duration.txt  7_Cache Poetry virtualenv.txt  8_Log poetry cache duration.txt  9_Cache pip wheels.txt  system.txt
scripts/: bench.py  bump_version.py  run_hook_paths.py
src/data_needs_reporter/: __init__.py  cli.py  config.py
src/data_needs_reporter/configs/: default.yaml
src/data_needs_reporter/eval/: __init__.py  labels_eval.py
src/data_needs_reporter/generate/: comms.py  defects.py  warehouse.py
src/data_needs_reporter/report/: classify.py  entities.py  llm.py  metrics.py  plots.py  prefilter.py  run.py  scoring.py
src/data_needs_reporter/utils/: __init__.py  cost_guard.py  duck.py  hashing.py  io.py  logging.py  rand.py
tests/: test_classifier.py  test_classify_caps.py  test_cli.py  test_cli_entrypoint.py  test_cli_init.py  test_config.py  test_data_health_daily.py  test_duck.py  test_duck_sanity.py  test_end_to_end.py  test_entities.py  test_eval.py  test_generators.py  test_invoice_aggregates.py  test_io.py  test_logging.py  test_marketplace_validate.py  test_metrics.py  test_metrics_spikes.py  test_monetization_tiers.py  test_perf.py  test_rand.py  test_scoring_basics.py
tests/goldens/: data_health.json  figures.json  themes.json
