[tool.poetry]
name = "data-needs-reporter"
version = "0.1.0"
description = "CLI for generating synthetic data needs reports."
authors = ["Your Name <you@example.com>"]
license = "UNLICENSED"
readme = "README.md"
packages = [{include = "data_needs_reporter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.4"
duckdb = "^0.10.3"
pyarrow = "^15.0.1"
polars = "0.19.19"
matplotlib = "^3.8.3"
click = ">=8.1,<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
dnr = "data_needs_reporter.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["data_needs_reporter"]
branch = true

[tool.coverage.report]
skip_empty = true
