[project]
name = "data-needs-reporter"
version = "0.1.2"
description = "CLI for generating synthetic data needs reports."
readme = "README.md"
authors = [{ name = "Data Needs Reporter Team", email = "maintainers@dataneedsreporter.dev" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"
keywords = ["data", "analytics", "cli", "synthetic-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer[all]>=0.9.0,<0.10",
    "pydantic>=2.6.4,<3.0.0",
    "duckdb>=0.10.3,<0.11.0",
    "pyarrow>=15.0.1,<16.0.0",
    "polars==0.19.19",
    "matplotlib>=3.8.3,<4.0.0",
    "click>=8.1,<8.2",
]

[project.scripts]
dnr = "data_needs_reporter.cli:app"

[tool.poetry]
name = "data-needs-reporter"
version = "0.1.2"
description = "CLI for generating synthetic data needs reports."
authors = ["Data Needs Reporter Team <maintainers@dataneedsreporter.dev>"]
license = "Proprietary"
readme = "README.md"
keywords = ["data", "analytics", "cli", "synthetic-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
]
packages = [{include = "data_needs_reporter", from = "src"}]
include = ["src/data_needs_reporter/configs/default.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.4"
duckdb = ">=0.10.3,<0.11.0"
pyarrow = "^15.0.1"
polars = ">=0.19.19,<0.20.0"
matplotlib = "^3.8.3"
click = ">=8.1,<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
pytest-cov = "^4.1.0"
black = "^24.8.0"
ruff = "^0.6.5"
isort = "^5.13.2"

[tool.poetry.scripts]
dnr = "data_needs_reporter.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"data_needs_reporter" = ["configs/default.yaml"]

[tool.coverage.run]
source = ["data_needs_reporter"]
branch = true

[tool.coverage.report]
skip_empty = true
